--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
         <input id="referralCode" type="text" placeholder="Referral Code (Optional)" style="width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 8px; margin-bottom: 15px;">
         <button id="loginBtn" style="width:100%; padding:14px; background:var(--accent); border:none; border-radius:12px; color:white; font-weight:700; cursor:pointer;">Continue with Phone</button>
         <div class="signin-wrap" style="margin-top: 15px;">
-          <div class="pe_signin_button" data-client-id="17286597723145724436" data-theme="dark"></div>
+          <div class="pe_signin_button" data-client-id="17286597723145724436" data-redirect-url="https://https://goldensam112.github.io/SRLUDO/index.html" 
+     data-theme="dark">
+</div> data-theme="dark"></div>
         </div>
       </div>
     </section>
