--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     :root {
       --bg: #040913;
       --card: #ffffff;
+      --card-dark: #0d1b33;
       --text: #e8efff;
       --text-dark: #1e293b;
       --muted: #9fb0d1;
@@ -26,7 +27,7 @@
       --shadow: 0 16px 40px rgba(0, 0, 0, 0.45);
     }
 
-    /* Fix: Prevent Flash of Login Screen */
+    /* 1. NEW: Hide body initially to prevent login flash */
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -53,7 +54,7 @@
       padding-bottom: 90px;
     }
 
-    /* Sidebar & Overlay */
+    /* --- SIDEBAR & OVERLAY --- */
     .sidebar {
       position: fixed; inset: 0 auto 0 0; width: 78%; max-width: 320px; background: #09172d;
       border-right: 1px solid var(--line); z-index: 150; transform: translateX(-100%); transition: transform 0.24s ease; padding: 16px;
@@ -66,12 +67,14 @@
     .overlay { position: fixed; inset: 0; background: rgba(0, 0, 0, 0.65); z-index: 140; display: none; }
     .overlay.show { display: block; }
 
-    /* Login Screen */
+    /* --- LOGIN SCREEN --- */
     .login-screen { min-height: 100vh; display: grid; place-items: center; padding: 20px; background: #0f172a; }
-    .login-card { width: 100%; background: white; border-radius: 24px; padding: 28px 20px; text-align: center; }
+    .login-card {
+      width: 100%; background: white; border-radius: 24px; padding: 28px 20px; text-align: center;
+    }
     .main-logo { height: 80px; margin-bottom: 10px; filter: drop-shadow(0 0 10px var(--accent)); }
 
-    /* Header & Premium Wallets */
+    /* --- HEADER --- */
     .sticky-header {
       position: sticky; top: 0; z-index: 100; background: #1e293b;
       padding: 12px 14px; display: flex; align-items: center; justify-content: space-between;
@@ -79,6 +82,7 @@
     .header-left { display: flex; align-items: center; gap: 12px; }
     .hamburger { border: none; background: none; color: white; font-size: 24px; cursor: pointer; }
     .nav-logo { height: 35px; }
+    
     .wallets { display: flex; gap: 8px; }
     .pill {
       min-width: 100px; border-radius: 999px; padding: 7px 11px; font-size: 11px; text-align: center;
@@ -88,12 +92,12 @@
     .cash-pill { background: linear-gradient(130deg, #0f49b3, #2a89ff); }
     .win-pill { background: linear-gradient(130deg, var(--gold-1), var(--gold-2)); color: #1f1711; }
 
-    /* Game UI */
     .announcement {
       background: linear-gradient(90deg, #0f172a, #1e293b);
       margin: 15px; padding: 15px; border-radius: 12px; border: 1.5px solid var(--gold-2);
       color: white; text-align: center; font-size: 13px; font-weight: 500;
     }
+
     .game-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; padding: 0 15px; }
     .game-card {
       background: white; border-radius: 15px; overflow: hidden; box-shadow: var(--shadow);
@@ -103,13 +107,13 @@
     .game-card .img-wrap { width: 100%; height: 75%; overflow: hidden; }
     .game-card img { width: 100%; height: 100%; object-fit: cover; }
     .game-label { height: 25%; width: 100%; display: flex; align-items: center; justify-content: center; font-weight: 700; color: var(--text-dark); }
+    
     .live-tag {
       position: absolute; top: 8px; right: 8px; background: white; color: var(--danger);
       font-size: 10px; font-weight: 800; padding: 2px 8px; border-radius: 50px; display: flex; align-items: center; gap: 4px;
     }
     .dot { width: 6px; height: 6px; background: var(--danger); border-radius: 50%; animation: blink 1s infinite; }
 
-    /* Modal */
     .modal {
       position: fixed; left: 50%; top: 50%; width: min(92%, 460px); transform: translate(-50%, -50%);
       background: #0a1a32; border: 1px solid var(--line); border-radius: 14px; z-index: 200; padding: 16px;
@@ -208,7 +212,7 @@
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getDatabase, ref, get, set, onValue, query, limitToLast } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
+    import { getDatabase, ref, get, set, update, onValue, query, limitToLast } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js';
 
     const firebaseConfig = {
       apiKey: 'AIzaSyAx0fr47IsOtBxakcBj1ndwDYle_XlaE-Y',
@@ -232,14 +236,13 @@
     const historyModal = document.getElementById('historyModal');
     const historyList = document.getElementById('historyList');
 
-    let currentPhone = localStorage.getItem('sr_ludo_phone');
-
     const toggleSidebar = (show) => {
       sidebar.classList.toggle('open', show);
       overlay.classList.toggle('show', show);
     };
 
     const showHistory = async (type) => {
+      let currentPhone = localStorage.getItem('sr_ludo_phone');
       if (!currentPhone) return;
       document.getElementById('modalTitle').textContent = type.replace('_', ' ').toUpperCase();
       historyList.innerHTML = '<p style="color:gray;">Loading...</p>';
@@ -266,8 +269,9 @@
       });
     };
 
-    // Fix: Login Flash & Logout Handling
+    // --- UPDATED LOGIC TO PREVENT BLACK SCREEN & FIX LOGIN ---
     const checkAuthAndShow = () => {
+      const currentPhone = localStorage.getItem('sr_ludo_phone');
       if (currentPhone) {
         loginScreen.classList.add('hidden');
         dashboard.classList.remove('hidden');
@@ -276,7 +280,22 @@
         loginScreen.classList.remove('hidden');
         dashboard.classList.add('hidden');
       }
+      // Reveal the body after logic is set
       setTimeout(() => { document.body.classList.add('ready'); }, 50);
+    };
+
+    window.phoneEmailListener = (userObj) => {
+      if (userObj.phone_no) {
+        localStorage.setItem('sr_ludo_phone', userObj.phone_no);
+        // Instant visual switch
+        loginScreen.classList.add('hidden');
+        dashboard.classList.remove('hidden');
+        document.body.classList.add('ready');
+        location.reload(); 
+      } else {
+        document.body.classList.add('ready');
+        alert("Login failed. Please try again.");
+      }
     };
 
     document.getElementById('menuBtn').onclick = () => toggleSidebar(true);
@@ -287,13 +306,6 @@
     document.querySelectorAll('.history-link').forEach(link => {
       link.onclick = (e) => { e.preventDefault(); showHistory(link.dataset.type); toggleSidebar(false); };
     });
-
-    window.phoneEmailListener = (userObj) => {
-      if (userObj.phone_no) {
-        localStorage.setItem('sr_ludo_phone', userObj.phone_no);
-        location.reload();
-      }
-    };
 
     checkAuthAndShow();
   </script>
