--- a/battles.html
+++ b/battles.html
@@ -232,10 +232,11 @@
   <section id="rulesModal" class="modal" role="dialog" aria-modal="true">
     <h3 class="title">Battle Rules</h3>
     <ul class="muted small">
-      <li>₹100 battle payout = ₹190 to winner.</li>
-      <li>₹500 battle payout = ₹970 to winner.</li>
-      <li>Winner/Loser declarations are final unless dispute opened with screenshot proof.</li>
-      <li>2% referral commission is credited to referrer cash wallet on successful completion.</li>
+      <li>Agar popular code aye toh aap screen recording karke game left kare</li>
+      <li>Agar samne wale theme Se khel raha he apko nahi khelna toh opponent ki 2 goti khulne se phele game screen recording karke game left kare</li>
+      <li>Fake Screenshot Dalne Par 50 Rupay Penalty Lagegi</li>
+      <li>withdrawl within 15 minutes me diya jata hai</li>
+       <li>game cancel karte time reason aur screenshot dono admin ko send kare</li>
     </ul>
     <button class="btn full" data-close-modal="rulesModal" type="button">Close</button>
   </section>
