--- a/profile.html
+++ b/profile.html
@@ -203,7 +203,7 @@
       appId: '1:1080387235822:web:77faea231641837950e8ff'
     };
 
-    const IMGBB_API_KEY = 'YOUR_IMGBB_API_KEY';
+    const IMGBB_API_KEY = window.IMGBB_API_KEY || localStorage.getItem('sr_ludo_imgbb_api_key') || 'ca44783bda6779b5e3913432bd243b30';
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
@@ -235,9 +235,6 @@
     }
 
     async function uploadToImgBB(file) {
-      if (!IMGBB_API_KEY || IMGBB_API_KEY === 'YOUR_IMGBB_API_KEY') {
-        throw new Error('ImgBB API key missing in profile.html');
-      }
       const fd = new FormData();
       fd.append('image', file);
       const response = await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`, {
